text edits.  new model with instructions for first-time-viewing.  save things to the database with capitalized first letter for sorting purposes.

--- a/templates/aboutme.html
+++ b/templates/aboutme.html
@@ -2,15 +2,15 @@
 
 {% block title %}Doug McIntosh{% endblock title %}
 {% block content %}
-<div style="height:65vh;overflow-y:scroll">
+<div style="height:70vh">
   <h2 style="text-align:center">A few brief words about Me </h2>
   <h5 style="text-align:center"><a style="align-items:center;text-align:center" href="http://www.linkedin.com/in/doug-mcintosh" target="_blank">My LinkedIn Profile</a></h5>
-  <div style="display:flex;margin-top:5vh;margin-left:15vw;margin-right:25vw;overflow:hidden">
-    <figure style="width:50vw;height:50vw">
+  <div style="display:flex;margin-top:5vh;margin-left:5vw;margin-right:10vw;overflow:hidden">
+    <figure style="width:25vw">
         <img src="static/assets/me_and_Sam.jpg" alt="Ocean Park Nov. 2020"/>
         <figcaption>Ocean Park, WA November 2020</figcaption>
     </figure>
-    <div id="my_text" style="height: 50vh; overflow-y: scroll; margin-left: 5vw; display: inline-block">
+    <div id="my_text" style="margin-left:10vw;display: inline-block">
         <p>&nbsp&nbsp&nbsp&nbspI've lived and breathed drumming and music for most of my life.  I will talk your ear off about my favorite music and musicians if the topic arises.</p>
         <p>&nbsp&nbsp&nbsp&nbspI grew up in St. Louis, MO and have been living in Seattle, WA since 2005.  I love Seattle.  I don't mind what the people around here call 'rain'.  We don't melt or freeze here.</p>
       <p>&nbsp&nbsp&nbspIn the meantime I've also managed to work in the IT industry for 20+ years dealing mostly with server-side development/support in the Telecom domain.</p>
