--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -2,14 +2,45 @@
  * Author: Akash Bhadange
  */
 /* The Modal (background) */
-.tab {
-    display: inline-block;
-    margin-left: 20px;
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
 }
-input[type='submit'] {
-    background-color: #37324b;
+.modal-header {
     color: white;
+    background-color: #37324b;
 }
+/* Style for the modal content */
+.modal-content {
+    position: relative;
+    background-color: #fefefe;
+    /*margin: 15% auto;*/
+    width:100%;
+    /*height:100%;*/
+    /*padding: 20px;*/
+    border: 1px solid #888;
+}
+.close-btn {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+.close-btn:hover,
+.close-btn:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 .full-width-button {
     width: 100%;
     padding: 10px;
