--- a/templates/wiki_search_results.html
+++ b/templates/wiki_search_results.html
@@ -5,9 +5,11 @@
 {% block search_results %}
 <section>
     {% if search_content %}
-    <h5 style="text-align:center">Wikipedia search: {{search_content.search_text}}</h5>
     <form  id="insert" action="{{ url_for('wiki_insert') }}" method="post">
-      <div id="outer_div" style="width:100vw;text-align:center;align-items:center;justify-content:center">
+        <div style="margin-bottom:1vh;text-align:center;margin-top:1vh">
+            <h4>Wikipedia search: {{search_content.search_text}} <input type="submit" value="Save to Database" /></h4>
+        </div>
+      <div id="outer_div" style="width:100vw;text-align:center;margin-bottom:3vh;align-items:center;justify-content:center">
         <div id="table-wrapper" style="margin-left:20vw">
             <div id="table-scroll">
                 <table>
@@ -32,10 +34,6 @@
                 </table>
             </div>
         </div>
-      </div>
-        
-      <div style="margin-bottom:1vh;margin-top:1vh;display:flex;align-items:center;justify-content:center;">
-          <input type="submit" value="Save to Database" />
       </div>
     </form>
     {% endif %}
