--- a/templates/index.html
+++ b/templates/index.html
@@ -50,13 +50,19 @@
                                 <h3 class="text-left"><a href="{{url_for('data_analysis')}}">Data Visualization</a></h3>
                             </div>
                             <div class="swiper-slide client-box">
-                                <h3 class="text-left"><a href="{{url_for('aboutthis')}}">any</a></h3>
+                                <h3 class="text-left"><a href="{{url_for('blank')}}">any</a></h3>
                             </div>
                             <div class="swiper-slide client-box">
-                                <h3 class="text-left"><a href="{{url_for('aboutthis')}}">other</a></h3>
+                                <h3 class="text-left"><a href="{{url_for('blank')}}">other</a></h3>
                             </div>
                             <div class="swiper-slide client-box">
-                                <h3 class="text-left"><a href="{{url_for('aboutthis')}}">ideas are appreciated</a></h3>
+                                <h3 class="text-left"><a href="{{url_for('blank')}}">ideas</a></h3>
+                            </div>
+                            <div class="swiper-slide client-box">
+                                <h3 class="text-left"><a href="{{url_for('blank')}}">are</a></h3>
+                            </div>
+                            <div class="swiper-slide client-box">
+                                <h3 class="text-left"><a href="{{url_for('blank')}}">appreciated</a></h3>
                             </div>
                         </div>
                     </div>
