--- a/templates/wiki_search.html
+++ b/templates/wiki_search.html
@@ -29,7 +29,7 @@
         </div>
         {% endfor %}
     </div>
-    <div id="intro_text" class="modal" style="margin-left:20vw;margin-top:25vh;margin-right:5vw;width:75vw;height:50vh">
+    <div id="intro_text" class="modal" style="margin-left:20vw;margin-top:35vh;margin-bottom:10vh;margin-right:5vw;width:75vw;height:50vh">
         <div class="modal-header">
           <h4>Wikipedia/Youtube Library <a id="intro_close" class="close-btn">X</a></h4>
         </div>
@@ -115,7 +115,7 @@
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="static/js/bootstrap.js"></script>
     <script type="text/javascript">
-        if ("{{ db_content.SHOW_INTRO }}") {
+        if ("{{db_content.SHOW_INTRO}}") {
             var intro_text = document.getElementById('intro_text');
             var close_btn = document.getElementById('intro_close');
             close_btn.onclick = function () {
