--- a/templates/wiki_search_results.html
+++ b/templates/wiki_search_results.html
@@ -9,8 +9,8 @@
         <div style="margin-bottom:1vh;text-align:center;margin-top:1vh">
             <h4>Wikipedia search: {{search_content.search_text}} <input type="submit" value="Save to Database" /></h4>
         </div>
-      <div id="outer_div" style="width:100vw;text-align:center;margin-bottom:3vh;align-items:center;justify-content:center">
-        <div id="table-wrapper" style="margin-left:20vw">
+      <div id="outer_div" style="width:100vw;margin-bottom:3vh;align-items:center;justify-content:center">
+        <div id="table-wrapper">
             <div id="table-scroll">
                 <table>
                     <tbody>
