--- a/templates/wiki_search.html
+++ b/templates/wiki_search.html
@@ -35,7 +35,7 @@
         </div>
         <div class="modal-content">
           <h4>Click an item on the left to view its contents and peruse the Wikipedia and/or Youtube pages</h4>
-          <h3>OR</h3>
+          <h3 style="text-align:center">OR</h3>
           <h4>Enter a search string of your choosing into the text box above, click submit, choose which items you would like to save, and then click the 'Save to Database' button.</h4>
           <h4>Any views of the Wikipedia/Youtube pages will be stored and will show up in the 'Data Visualization' section of this site.</h4>
         </div>
