--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -585,7 +585,8 @@ ul.main-nav li a {
   padding: 5px 15px;
 }
 ul.main-nav li a:hover {
-  color: #ffbe61;
+  /*color: #ffbe61;*/
+  color: #37324b;
 }
 ul.main-nav.show-it {
   opacity: 1;
