--- a/templates/aboutthis.html
+++ b/templates/aboutthis.html
@@ -25,11 +25,11 @@
                 </li>
                 <li>
                     &nbsp&nbsp&nbsp&nbsp<b>Youtube Table</b>
-                    <p>Information pertaining to a Youtube video.  The column 'wiki_id' ties it to with the related entry in the Wikipedia table</p>
+                    <p>Information pertaining to a Youtube video.  The column 'wiki_id' ties it to the related entry in the Wikipedia table</p>
                 </li>
                 <li>
                     &nbsp&nbsp&nbsp&nbsp<b>view_counts Table</b>
-                    <p>Entries are inserted to this when the user clicks to view a Wikipedia or Youtube link. This seemed to be the easiest bit of data I could do graphing with</p>
+                    <p>Entries are inserted to this when the user clicks to view a Wikipedia or Youtube link. This seemed to be the easiest bit of data that I could create some graphs with.</p>
                     <p>This table is only maintaining 7 days worth of data. The Python class for the 'Data Visualization' graphs will perform the delete every time it is instantiated.</p>
                 </li>
             </ul>
