annotated bubbles by type

--- a/templates/data_analysis.html
+++ b/templates/data_analysis.html
@@ -2,7 +2,18 @@
 
 {% block title %}Doug McIntosh{% endblock %}
 <div style="width:100vw;height:2vh;background-color:#37324b"></div>
-{% block content %}<h4 style="text-align:center">Python Matplotlib Graphs</h4>{% endblock content %}
+{% block content %}
+<h4 style="text-align:center">Python Matplotlib Graphs</h4>
+<!--<form id="search" style="align-items:center;text-align:center;margin-top:1vh;margin-bottom:1vh" action="{{ url_for('data_analysis') }}" method="post">
+   <label for=""topic">Create Graph for a Topic</label>
+   <select id="topic" name="topics">
+     {% for mytopic in content.topics %}
+     <option value="{{mytopic}}">{{mytopic}}</option>
+     {% endfor %}
+   </select> 
+   <input type="submit" />
+</form>-->
+{% endblock content %}
 
 {% block search_results %}
 <section style="width:100vw;display:flex">
