--- a/templates/data_analysis.html
+++ b/templates/data_analysis.html
@@ -19,11 +19,31 @@
 <section style="width:100vw;display:flex">
     <div style="width:20vw;margin-right:1vw;margin-bottom:2vh">
         {% for k in content.types %}
-            <form id="{{k}}" action="{{url_for('data_analysis')}}?graph={{k}}" width="100%" method="post">
-               <input value="{{k}}" type="submit" class="full-width-button" style="text-align:left">
-            </form>
-        {% endfor %} 
+        <form id="{{k}}" action="{{url_for('data_analysis')}}?graph={{k}}" width="100%" method="post">
+            <input value="{{k}}" type="submit" class="full-width-button" style="text-align:left">
+        </form>
+        {% endfor %}
     </div>
+    {% if content.errors %}
+    <div id="errors" class="modal" style="display:block;margin-left:20vw;margin-top:35vh;margin-bottom:10vh;margin-right:5vw;width:75vw;height:50vh">
+        <div class="modal-header">
+            <h4>Graph exception <a id="intro_close" class="close-btn">X</a></h4>
+        </div>
+        <div class="modal-content">
+            <h4>We got some exceptions...</h4>
+            {% for each_error in content.errors %}
+            <h6>{{each_error}}</h6>
+            {% endfor %}
+        </div>
+    </div>
+    <script type="text/javascript">
+        var close_btn = document.getElementById('errors_close');
+        var error_window = document.getElementById('errors');
+       close_btn.onclick = function () {
+        error_window.style.display = 'none';
+       };
+    </script>
+    {% endif %}
     <div id="myData" style="justify-content: center; margin-left: 1vw;margin-bottom:1vw">
         {% if content.graphs %}
         {% for gk,each_graph in content.graphs.items() %}
@@ -33,7 +53,7 @@
         {% endfor %}
         {% endif %}
     </div>
-         
+
 </section>
 
 {% endblock search_results %}
