--- a/templates/wiki_search_results.html
+++ b/templates/wiki_search_results.html
@@ -4,37 +4,56 @@
 {% endblock content %}
 {% block search_results %}
 <section>
+    {% if search_content.errors %}
+    <div id="errors" class="modal" style="display:block;margin-left:20vw;margin-top:35vh;margin-bottom:10vh;margin-right:5vw;width:75vw;height:50vh">
+        <div class="modal-header">
+            <h4>Graph exception <a id="intro_close" class="close-btn">X</a></h4>
+        </div>
+        <div class="modal-content">
+            <h4>We got some exceptions...</h4>
+            {% for each_error in search_content.errors %}
+            <h6>{{each_error}}</h6>
+            {% endfor %}
+        </div>
+    </div>
+    <script type="text/javascript">var close_btn = document.getElementById('errors_close');
+      var error_window = document.getElementById('errors');
+      close_btn.onclick = function () {
+        error_window.style.display = 'none';
+        };
+    </script>
+    {% endif %}
     {% if search_content %}
-    <form  id="insert" action="{{ url_for('wiki_insert') }}" method="post">
+    <form id="insert" action="{{ url_for('wiki_insert') }}" method="post">
         <div style="margin-bottom:1vh;text-align:center;margin-top:1vh">
             <h4>Wikipedia search: {{search_content.search_text}} <input type="submit" value="Save to Database" /></h4>
         </div>
-      <div id="outer_div" style="width:100vw;margin-bottom:3vh;align-items:center;justify-content:center">
-        <div id="table-wrapper">
-            <div id="table-scroll">
-                <table>
-                    <tbody>
-                        {% for page in search_content['pages'] %}
-                        <tr>
-                            <td><input type="checkbox" id="{{page.id}}" name="{{page.id}}" title="{{page.id}}" value="{{page}}"></td>
-                            <td>{{page.title}}</td>
-                            <td>
-                                <div style="display:flex;">
-                                    {% if page.thumbnail.url %}
-                                    <a href="{{page.url}}" target="_blank"><img style="height:auto;" src="{{page.thumbnail['url']}}" width="{{page.thumbnail['width']}}" height="{{page.thumbnail['height']}}" /></a>
-                                    {% else %}
-                                    <a href="{{page.url}}" target="_blank">{{page.title}}</a>
-                                    {% endif %}
-                                    <p>&nbsp{{page.description}}</p>
-                                </div>
-                            </td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
+        <div id="outer_div" style="width:100vw;margin-bottom:3vh;align-items:center;justify-content:center">
+            <div id="table-wrapper">
+                <div id="table-scroll">
+                    <table>
+                        <tbody>
+                            {% for page in search_content['pages'] %}
+                            <tr>
+                                <td><input type="checkbox" id="{{page.id}}" name="{{page.id}}" title="{{page.id}}" value="{{page}}"></td>
+                                <td>{{page.title}}</td>
+                                <td>
+                                    <div style="display:flex;">
+                                        {% if page.thumbnail.url %}
+                                        <a href="{{page.url}}" target="_blank"><img style="height:auto;" src="{{page.thumbnail['url']}}" width="{{page.thumbnail['width']}}" height="{{page.thumbnail['height']}}" /></a>
+                                        {% else %}
+                                        <a href="{{page.url}}" target="_blank">{{page.title}}</a>
+                                        {% endif %}
+                                        <p>&nbsp{{page.description}}</p>
+                                    </div>
+                                </td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
-      </div>
     </form>
     {% endif %}
 </section>
