--- a/templates/aboutthis.html
+++ b/templates/aboutthis.html
@@ -5,19 +5,20 @@
 <div style="text-align:center;">
   <h3>Wikipedia/Youtube Library</h3>
   <h4>A Flask Python Web App developed using Visual Studio and published on PythonAnywhere.com</h4>
+    <h6>This is still a work in progress.  I wanted to at least put something out there once I got some things to work.</h6>
   <a href="https://github.com/JackManu/portfolio" target="_blank">My GitHub Repository for this project</a>
  <div style="text-align: left;margin-top:1vh;margin-bottom:2vh;margin-right:1vw">
 
   <p style="padding-left: 5vw"><b>How to use: </b>Enter a search term for something that interests you, choose which Wikipedia pages you would like to save and click the 'Save to database' button. The title(s) of the Wikipedia page(s) chosen will be used as a search term to also save 50 Youtube links.  Click on a couple of the links and visit the 'Data Visualization' section to see them show up on the graphs.</p>
 
-  <div style="height: 45vh; overflow-y: scroll;margin-bottom:1vh">
-    <ul style="list-style-type:disc !important;padding-left:2vw !important">
+  <div style="height: 45vh; overflow-y: scroll;margin-bottom:5vh">
+    <ol style="list-style-type:disc !important;padding-left:2vw !important">
         <li><b>RESTful APIs</b>
           <p>I set up API keys in the Wikipedia and Google API sites to enable connectivity.</p>
           <p>Wikipedia APIs require an additional step to get an authentication token based on the API key (Curl command run through Python subprocess/check_output).  These tokens expire after 3 hours, I think, but I retrieve them every time.</p>
           <p>The Python requests module is used to retrieve the json data from the sources</p>
         </li>
-        <li><b>SQLite Database</b>(4, count them, 4 WHOLE tables. lol.  I've definitely dealt with more complex databases and SQL over the years.)
+        <li><b>SQLite Database</b>(4, count them, 4 WHOLE tables. lol.  I've definitely dealt with more complex databases and SQL over the years.) 
             <ul>
                 <li>
                     &nbsp&nbsp&nbsp&nbsp<b>Wikipedia Table</b>
@@ -42,7 +43,25 @@
             <b>Data Analysis</b>
             <p>Currently showing a few different Python matplotlib graphs based on the data stored in the database.</p>
         </li>
-    </ul>
+    </ol>
+    <h3 style="text-align:center"><b>Python Classes</b></h3>
+    <ol>
+        <li>
+            <p><b>main.py</b>:  The main Flask application where the page entry points are set up and a lot of the main logic happens</p>
+        </li>
+        <li>
+            <p><b>Portfolio_base</b>:  base class that handles opening the config file and all database operations.</p>
+        </li>
+        <li>
+            <p><b>BaseWeb</b>:  sub-class of portfolio that defines the call_requests function.</p>
+        </li>
+        <li>
+            <p><b>Youtube_reader</b>: sub-class of BaseWeb.  Handles calls to the Google/Youtube apis</p>
+        </li>
+        <li>
+            <p><b>Wikipedia_reader</b>: sub-class of Baseweb with added method to run the Curl command that gets the authentication token from Wikipedia.  Handles the data sent to/from Wikipedia</p>
+        </li>
+    </ol>
   </div>
  </div>
 </div>
